# langchain-mcp-multiserver-demo

./: .env.example  .gitignore  ALLOWED_PATHS.md  CLAUDE.md  MIGRATION_V1.md  README.md  pyproject.toml
.cursor/prompts/: quick-start.txt  storytelling-suite-main.txt  storytelling-suite-reflection.txt
.cursor/rules/: llm-stack-alignment.mdc  mcp-langgraph-context.mdc  repo-storytelling-suite-v1.mdc  repo-storytelling-suite-v2.mdc  repo-storytelling-suite.mdc  scope-guardrails.mdc
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
architecture/: README.md
architecture/diagrams/: 02_architecture_diagrams.md
architecture/docs/: 01_component_inventory.md  (+2 more)
clients/: client.ipynb  display_utils.py  integration_test.py  integration_test_mcp_json.py  langchain_mcp_adapter_client.ipynb
docs/: FASTMCP_PYDANTICAI_COMPARISON.md  LANGGRAPH_MIGRATION_NOTES.md  LANGGRAPH_MIGRATION_V1.md  MCP_VS_A2A_DECISION_GUIDE.md  MINIMAL_TESTING_GUIDE.md  PYDANTIC_MODEL_REUSE_PATTERNS.md  TRANSPORT_COMPARISON.md  integration_test_mcp_json.md  langgraph_react_agent_migration_walkthrough.md
examples/: README.md
scripts/: allowed_paths.txt  verify_changed_files.sh
servers/: __init__.py  langchain_tools_server.py  weather_server.py  wrap_langchain_tools_server.py
storytelling/: START_HERE.md
templates/: LEARNING_REFLECTION_TEMPLATE.md  LINKEDIN_POST_TEMPLATE.md  README_TEMPLATE.md  VIDEO_SCRIPT_TEMPLATE.md
tests/: run_all_tests.sh  test_fasta2a_minimal.py  test_fastapi_minimal.sh  test_fastmcp_minimal.py  test_models_minimal.py  test_pydanticai_minimal.py
(+30 files in other folders)
